# scFM_benchmarking

./: .gitignore  CLAUDE.md  README.md  Tutorial_ZeroShot_Integration.ipynb  jupyter.sh  main.py  pyproject.toml
notebooks/: Tutorial_GRN.ipynb  Tutorial_Multiomics.ipynb  create_gene_umap.ipynb  encoding.ipynb  geneformer_encoding.py  geneformer_preprocess.ipynb  get_embeddings.ipynb  get_geneformer_embeddings.ipynb  plotting.ipynb  scgpt_encoding.ipynb  scgpt_training.ipynb  test_scfm_utils.ipynb  training.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/offline-run-20260202_184721-pdxdgdx0/files/: requirements.txt
reports/geneformer/hp_tuning_cd20/binary/: report_lr1e-02_e12.txt  report_lr1e-02_e20.txt  report_lr1e-02_e50.txt  report_lr1e-02_e8.txt  report_lr1e-03_e12.txt  report_lr1e-03_e20.txt  report_lr1e-03_e50.txt  report_lr1e-03_e8.txt  report_lr1e-04_e12.txt  report_lr1e-04_e20.txt  report_lr1e-04_e50.txt  report_lr1e-04_e8.txt  report_lr1e-05_e12.txt  report_lr1e-05_e20.txt  report_lr1e-05_e50.txt  report_lr1e-05_e8.txt  report_lr1e-06_e12.txt  (+4 more)
reports/test/enr_Reactome/: Reactome_2022.Human.enrichr.reports.txt
src/geneformer/: __init__.py  dataset.py  encode.py
src/scfm_utils/: __init__.py  constants.py
src/scfm_utils/scgpt/: __init__.py  dataset.py  encode.py  io.py  model.py
src/scfm_utils/trrust/: __init__.py  classifier.py  training_data.py
src/scgpt/: __init__.py  dataset.py  encode.py  model.py
src/trrust/: __init__.py  training.py  training_data.py
tests/: test_geneformer.py  test_scgpt.py  test_training.py  test_trrust.py
(+156 files in other folders)
