[project]
name = "scfm-benchmarking"
version = "0.1.0"
description = "Benchmarking gene embeddings from single cell foundation models to evaluate their performance on gene regulatory network predictions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gseapy>=1.1.11",
    "jupyterlab>=4.5.2",
    "plotly>=6.5.2",
    "scgpt>=0.2.4",
    "torch==2.3.1",
    "torch-geometric>=2.7.0",
    "torchtext>=0.18.0",
]
